# Quantum_Circuit_Simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cnot.h  deutsch.h  functions.h  quantum.h  toffoli.h
src/: CMakeLists.txt  functions.cpp  main.cpp
src/cnot/: CMakeLists.txt  cnot  cnot.cpp
src/deutsch/: CMakeLists.txt  deutsch.cpp
src/toffoli/: CMakeLists.txt  toffoli  toffoli.cpp
test/: CMakeLists.txt  test.cpp
